--- a/vue_trip/src/assets/css/reset.css
+++ b/vue_trip/src/assets/css/reset.css
@@ -4,6 +4,7 @@
     --secondary-color:#e10c44;
     --third-color:#484848;
     --fourth-color:#222;
+    --fivth-color:#008489;
 
     --primary-radius:12px;
     --secondary-radius:8px;
