--- a/vue_trip/src/assets/css/reset.css
+++ b/vue_trip/src/assets/css/reset.css
@@ -5,6 +5,8 @@
     --third-color:#484848;
     --fourth-color:#222;
     --fivth-color:#008489;
+    --six-color:#911949;
+    --seven-color:#b54c2c;
 
     --primary-radius:12px;
     --secondary-radius:8px;
@@ -26,6 +28,13 @@
     /* 这里是关键，不随着页面滚动，只在内部滚动 */
     overflow-y: auto;
 }
+
+.icon_check {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background: url(../img/detail/icon_check.png) 0 0 / 100% 100%;
+  }
 
 
 
